gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-routes
  namespace: default
spec:
  parentRefs:
  - name: web-gw
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /layout/
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: layout-web
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /social-feed
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: social-feed-web
      port: 80
